[gd_scene load_steps=11 format=2]

[ext_resource path="res://game/GameLogic.gd" type="Script" id=1]
[ext_resource path="res://game/Game.gd" type="Script" id=2]
[ext_resource path="res://game/GUI/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/GUI/PauseMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://animations/countdown.tres" type="Animation" id=6]
[ext_resource path="res://fonts/comfortaa_bold_256.tres" type="DynamicFont" id=7]
[ext_resource path="res://game/GUI/GameOverMenu.tscn" type="PackedScene" id=8]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float blur_amount : hint_range(0, 5);

void fragment() {
	COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur_amount);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/blur_amount = 0.0

[sub_resource type="Animation" id=3]
resource_name = "end"
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("../CameraFollow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 7 ),
"transitions": PoolRealArray( -3.86375, -3.86375, 1 ),
"update": 0,
"values": [ Vector2( 960, 540 ), Vector2( 960, 540 ), Vector2( 4800, 540 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CameraFollow/Camera:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 2.2, 3.5, 5.5, 7 ),
"transitions": PoolRealArray( 0.297302, 0.297302, 0.297302, 1, 1, 0.297302 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 35.0, 35.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../CameraFollow/Camera:zoom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2, 4.1, 5.2, 7 ),
"transitions": PoolRealArray( 1.7411, 1.7411, 1.36604, 0.217637, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop_game"
} ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 2 )
can_pause = true

[node name="GameLogic" type="Node" parent="."]
script = ExtResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 3 )]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="CLayerPause" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CLayerPause" instance=ExtResource( 5 )]

[node name="CLayerIntro" type="CanvasLayer" parent="."]
layer = 3

[node name="Blur" type="ColorRect" parent="CLayerIntro"]
material = SubResource( 2 )
margin_left = -960.0
margin_top = -540.0
margin_right = 2880.0
margin_bottom = 1620.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="IntroAnim" type="AnimationPlayer" parent="CLayerIntro"]
anims/countdown = ExtResource( 6 )

[node name="Center" type="CenterContainer" parent="CLayerIntro"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Countdown" type="Label" parent="CLayerIntro/Center"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 909.0
margin_top = 397.0
margin_right = 1010.0
margin_bottom = 683.0
custom_fonts/font = ExtResource( 7 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" type="ColorRect" parent="CLayerIntro"]
margin_left = -960.0
margin_top = -540.0
margin_right = 2880.0
margin_bottom = 1620.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CLayerEnd" type="CanvasLayer" parent="."]

[node name="GameOverAnim" type="AnimationPlayer" parent="CLayerEnd"]
pause_mode = 2
anims/end = SubResource( 3 )

[node name="GameOver" parent="." instance=ExtResource( 8 )]
margin_left = 3840.0
margin_right = 3840.0

[node name="CameraFollow" type="Node2D" parent="."]
position = Vector2( 960, 540 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera" type="Camera2D" parent="CameraFollow"]
current = true
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
